--- a/Aufgabe1-3/changes.txt
+++ b/Aufgabe1-3/changes.txt
@@ -4,24 +4,24 @@
     -
 
 * Test:
-    -
+    - Umbenannt in Test_1, weil wir sonst zwei gleich heißende Klassen haben
 
 *************
 
 * Population:
     - Umstellung als Interface
-    - Methoden in die das Interface implementierenden Klassen ausgelagert
+    - Methoden in die das Interface implementierenden Klassen ausgelagert (Wegfall der private-Methoden)
     - Beschreibungen dementsprechend geändert (ToDo)
-    -
 
 * Fichte & Buche:
     - Variablen auf private umgeändert und dementsprechende auftretende Probleme gelöst
     - Methoden von protected auf private, da nun keine Vererbungsbeziehungen, bei denen Methoden überschrieben werden müssen, bedacht werden (müssen)
+    - Beschreibungen dementsprechend geändert (ToDo)
 
 **************
 
 * Forst:
-    -
+    - Update Beschreibungen (ToDo)
 
 **************
 
