AB1-3: Forst, Population & UK ready to go

--- a/Aufgabe1-3/changes.txt
+++ b/Aufgabe1-3/changes.txt
@@ -19,12 +19,13 @@
 * Fichte & Buche:
     - Variablen auf private umgeändert und dementsprechende auftretende Probleme gelöst
     - Methoden von protected auf private, da nun keine Vererbungsbeziehungen, bei denen Methoden überschrieben werden müssen, bedacht werden (müssen)
-    - Zusicherungen dementsprechend korrigiert (ToDo)
+    - Zusicherungen dementsprechend korrigiert
 
 **************
 
 * Forst:
-    - Update Beschreibungen (ToDo)
+    - Update Beschreibungen
+    - ToString-Ausgabefehler bei zwei Populationen behoben
 
 **************
 
