AB 1-3: Minor Changes (Zusicherungen)

--- a/Aufgabe1-3/changes.txt
+++ b/Aufgabe1-3/changes.txt
@@ -24,8 +24,8 @@
 **************
 
 * Forst:
-    - Update Beschreibungen
-    - ToString-Ausgabefehler bei zwei Populationen behoben
+    - Update Zusicherungen
+    - ToString-Ausgabefehler bei den Populationen behoben
 
 **************
 
